<resources>
    <string name="app_name">MarvelApp</string>
    <string name="title_quiz">GUESS THE SUPERHERO</string>
    <string name="btn_hint">Use a Hint</string>
    <string name="btn_confirm">Confirm</string>
    <string name="dialog_hint_title">CHECK YOUR HINT</string>
    <string name="text_hint">After an alien device mutated her DNA, Danvers transformed from a merely brilliant pilot into one of the most powerful Super Heroes in the universe. Now soaring among the stars, Carol Danvers is known as Captain Marvel.</string>
    <string name="dialog_title_right">OH YEAH! YOU WIN :)</string>
    <string name="point_plus">+20 MARVEL POINTS</string>
    <string name="point_minus">NO MARVEL POINTS RECEIVED</string>
    <string name="hint_back">BACK TO GAME</string>
    <string name="quit_game">QUIT GAME</string>
    <string name="continue_r">CONTINUE</string>
    <string name="title_wrong">OH NO! YOU LOSE :(</string>
    <string name="bt_start_game">Start Game</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="quiz">Quiz</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="info_develop">This app uses Marvel API data. If you want to get the same data to your own app, click in the button below and find out more about Marvel API</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="enter_your_marvel_password_and_sign_in">Enter your Marvel password and sign in.</string>
    <string name="it_seems_that_you_already_have_an_account">It seems that you already have an account!</string>
    <string name="logo_marvel">Logo Marvel</string>
    <string name="hero_comic">Hero comic</string>
    <string name="create_a_password">Create a password</string>
    <string name="text_password">Your password must be at least 10 characters</string>
    <string name="text_password_2">Your password must include at least one number, one letter and one special character</string>
    <string name="text_password_3">Passwords must match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_button_create_a_password">CREATE AN ACCOUNT AND SIGN IN</string>
    <string name="text_create_account">Enter a valid email address and a password</string>
    <string name="text_create_account_2">We’ll use this to sign you in or to create an account if you don’t have one yet.</string>
    <string name="edText_email">E-mail</string>
    <string name="edText_password_user_creation">Password</string>
    <string name="edText_confirm_password_user_creation">Confirm your Password</string>
    <string name="text_continue">CONTINUE</string>
    <string name="texte_forgot_your_password">Forgot your password?</string>
    <string name="text_forgot_your_password_2">No problem! We’ll send you a link to reset it. Enter in the field below the email address you use to sign in to Marvel.</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="hero_image">Hero image</string>
    <string name="user_icon">User icon</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="remember_me">Remember-me</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_connect_using">OR CONNECT USING</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="the_marvel_journey">THE MARVEL JOURNEY</string>
    <string name="text_splash">Find your heroes, comics and have fun!</string>
    <string name="about_the_app">About the App</string>
    <string name="version_feb_24th_2021">Version Apr 19th, 2021</string>
    <string name="this_is_an_app_developed_by_students_in_training_please_help_us">This is an app developed by students in training. Please, help us!</string>
    <string name="share_the_app_with_friends">Share the app with friends</string>
    <string name="play_store">Play Store</string>
    <string name="rate_us_on_play_store">Rate us on play store</string>
    <string name="information_for_developers">Information for Developers</string>
    <string name="marvel_api">MARVEL API</string>
    <string name="check_your_inbox">CHECK YOUR INBOX</string>
    <string name="back_to_sign_in">BACK TO SIGN IN</string>
    <string name="search_for_comics_here">Search for Comics Here</string>
    <string name="search_for_heroes_here">Search for Heroes Here</string>
    <string name="amazing_spider_man">AMAZING SPIDER MAN</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_information">User Information</string>
    <string name="welcome_to_the_marvel_quiz">WELCOME TO THE MARVEL QUIZ!!!</string>
    <string name="buy_here">BUY HERE</string>
    <string name="confirm">Confirm</string>
    <string name="start_game">Start Game</string>
    <string name="facebook_app_id">1234358823649086</string>
    <string name="fb_login_protocol_scheme">fb1234358823649086</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="quiz_total">Do you know everything about Marvel heroes?</string>
    <string name="item">item</string>
    <string name="pergunta_um">"What is Peter Paker's middle name?"</string>
    <string name="fragment_resposta_um">Fleck</string>
    <string name="fragment_resposta_dois">Wayne</string>
    <string name="fragment_resposta_tres">Benjamin</string>
    <string name="fragment_resposta_quatro">Stark</string>
    <string name="json">perguntas.json</string>
    <string name="perguntas">perguntas</string>
    <string name="nome">nome</string>
    <string name="pergunta">pergunta</string>
    <string name="alt_1">alternativa1</string>
    <string name="alt_2">alternativa2</string>
    <string name="alt_3">alternativa3</string>
    <string name="alt_4">alternativa4</string>
    <string name="resposta">resposta</string>
    <string name="correto">correto</string>
    <string name="errado">errado</string>
    <string name="titulo">titulo</string>
    <string name="_80">80%</string>
    <string name="quest_corretas">3/5 right answers</string>
    <string name="resultado">"You've got"</string>
    <string name="simbolo_barra">/</string>
    <string name="resp_corretas">\u0020 right answers</string>
    <string name="result">Veja, esse foi o meu resultado no Quiz Marvel! Baixe o App Marvel Time no Google Play e teste os seus conhecimentos também!</string>
    <string name="questoes_corretas">/5 right answers</string>

</resources>