<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="257dp"
    android:layout_height="337dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="15dp"
    card_view:strokeColor="@color/white"
    card_view:strokeWidth="1dp"
    card_view:cardBackgroundColor="#EFEFEF">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/dialog_hint_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="65dp"
            android:background="#D10E25"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="85dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="center_horizontal|top"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/text_hint"/>

        <Button
            android:id="@+id/bt_hint_back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/hint_back"
            android:textColor="#D10E25"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="Roboto Condensed"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>